--- a/study/index.html
+++ b/study/index.html
@@ -11,26 +11,26 @@
 
 <body class="bg-light py-5">
 
-    <div class="container">
-        <div id="app">
-            <h2 class="mb-4">{{titulo}}</h2>
-
-            <form @submit.prevent="addMessages">            
-                <div class="mb-3">
-                    <label for="nome" class="form-label">Nome</label>
-                    <input type="text" class="form-control" id="nome" v-model="nome" placeholder="Digite seu nome">
+    <div id="app">
+        <div class="container d-flex justify-content-center align-items-center vh-100">
+            <div class="card p-4 shadow-lg" style="width: 100%; max-width: 400px;">
+                <h3 class="text-center mb-4">Login</h3>
+                <form @submit.prevent="fazerLogin">
+                    <div class="mb-3">
+                        <label for="usuario" class="form-label">Usuário</label>
+                        <input type="text" class="form-control" id="usuario" v-model="usuario" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="senha" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="senha" v-model="senha" required />
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Entrar</button>
+                </form>
+                <div class="mt-3 text-center text-danger" v-if="erroLogin">
+                    {{ erroLogin }}
                 </div>
-
-                <div class="mb-3">
-                    <label for="comentario" class="form-label">Lists</label>
-                    <ul class="list-group" v-for="info in infos">
-                        <li>{{info.nome}}</li>
-                    </ul>
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
         </div>
-
-        </form>
     </div>
     <!-- Bootstrap JS (opcional, para funcionalidades como modal/toast) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -39,26 +39,29 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <script>
-        const { createApp } = Vue
+        const {createApp} = Vue
         createApp({
+            name: 'Login',
             data() {
                 return {
-                    titulo:'Lista de nomes',
-                    nome:'',
-                    infos: []
+                    usuario: '',
+                    senha: '',
+                    erroLogin: ''
                 }
             },
 
             methods: {
-                addMessages() {
-                  this.infos.push({
-                    nome:this.nome
-                  })  
-                  this.nome = null
-                }                                
+                fazerLogin() {
+                    if (this.usuario === 'admin' && this.senha === '1234') {
+                        alert('Login bem-sucedido!')
+                        // redirecione ou salve token aqui
+                    } else {
+                        this.erroLogin = 'Usuário ou senha inválidos'
+                    }
+                }
             }
-
-        }).mount('#app')
+        }).mount('#app')       
     </script>
+
 
 </html>
