--- a/study/index.html
+++ b/study/index.html
@@ -10,25 +10,32 @@
 </head>
 
 <body class="bg-light py-5">
-
     <div id="app">
-        <div class="container d-flex justify-content-center align-items-center vh-100">
-            <div class="card p-4 shadow-lg" style="width: 100%; max-width: 400px;">
-                <h3 class="text-center mb-4">Login</h3>
-                <form @submit.prevent="fazerLogin">
-                    <div class="mb-3">
-                        <label for="usuario" class="form-label">Usuário</label>
-                        <input type="text" class="form-control" id="usuario" v-model="usuario" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="senha" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="senha" v-model="senha" required />
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Entrar</button>
-                </form>
-                <div class="mt-3 text-center text-danger" v-if="erroLogin">
-                    {{ erroLogin }}
+        <div class="container mt-4">
+            <form @submit.prevent="addMessages">
+                <div class="mb-3">
+                    <label for="nome" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" v-model="nome" placeholder="Digite seu nome">
                 </div>
+
+                <div class="mb-3">
+                    <label for="comentario" class="form-label">Lists</label>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" v-for="data in nomeList">{{data.nome}}</li>
+                    </ul>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+            <div class="card">
+                <div class="card-header">{{titulo}}</div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item" v-for="data in fotos">
+                        <div class="painel">
+                            <h2>{{data.titulo}}</h2>
+                            <img :src="data.url" :alt="data.titulo">
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -39,29 +46,47 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <script>
-        const {createApp} = Vue
+        const {
+            createApp
+        } = Vue;
+        // Componente: bloco de código HTML,CSS,JS... no Vue tudo e componente, botão, tela etc..
+        // O que é: hook do ciclo de vida do componente
+        // Executado: logo depois que o componente é criado e antes do DOM ser criado
+        // Usar: Inicializar variáveis e trabahar com componenetes antes de iniciar a pagina
         createApp({
-            name: 'Login',
             data() {
                 return {
-                    usuario: '',
-                    senha: '',
-                    erroLogin: ''
+                    titulo: 'Fotos Dog',
+                    fotos: [],
+                    nomeList: []
                 }
             },
 
+            // O que é: hook do ciclo de vida do componente
+            // Executado: automáticamente, logo depois que o componente é criado em tela e antes do DOM ser criado. 
+            // Usar: Chamadas API, acessar this, 
+            // Não usar: refs, document.querySelector
+            // Obs: criado depois que data já existe: 
+            // 1. beforeCreate
+            // 2. ✅ data (é configurado aqui)
+            // 3. created
+            created() {
+                fetch('http://localhost:3000/v1/fotos')
+                    .then((res) => res.json())
+                    .then((data) => {
+                        this.fotos = data
+                    })
+            },
+
             methods: {
-                fazerLogin() {
-                    if (this.usuario === 'admin' && this.senha === '1234') {
-                        alert('Login bem-sucedido!')
-                        // redirecione ou salve token aqui
-                    } else {
-                        this.erroLogin = 'Usuário ou senha inválidos'
-                    }
+                addMessages() {
+                    this.nomeList.push({
+                        nome: this.nome
+                    })
+                    this.nome = null
                 }
             }
-        }).mount('#app')       
+
+        }).mount('#app')
     </script>
-
-
 </html>
