--- a/study/baisc/1-Begin.html
+++ b/study/baisc/1-Begin.html
@@ -26,7 +26,7 @@
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
 <body>
-  <div class="app" v-cloak>
+  <div id="app" v-cloak>
 
   </div>
   <script>
