--- a/sintaxe/Basic/1-Begin.html
+++ b/sintaxe/Basic/1-Begin.html
@@ -22,14 +22,16 @@
 
 </head>
 
-<!-- Vue.js -->
+<!-- Chamada/importação do Vue -->
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
 <body>
+  <!--  Div "app" é o ponto de montagem do Vue -->  
   <div id="app" v-cloak>
 
   </div>
   <script>
+    // Criação da instância do Vue
     const app = Vue.createApp({}).mount("#app")
   </script>
 </body>
