--- a/sintaxe/Basic/2.1-DataBinding.html
+++ b/sintaxe/Basic/2.1-DataBinding.html
@@ -1,3 +1,8 @@
+<!--
+  Data Binding: é o mecanismo que conecta os dados do JavaScript (modelo) com a 
+  interface do usuário (HTML).
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,12 +27,6 @@
 
 </head>
 
-<!--
-  Data Binding: é o mecanismo que conecta os dados do JavaScript (modelo) com a 
-  interface do usuário (HTML).
--->
-
-
 <!-- Vue.js -->
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
@@ -43,7 +42,7 @@
              v-model="fillIn" />
     </div>
 
-    <p class="fs-5 mb-4"><strong>Output:</strong> {{ fillIn }}</p>
+    <p class="fs-5 mb-4"><strong>Saudação:</strong> {{ fillIn ? `Olá, ${fillIn}!` : 'Digite seu nome.' }}</p>
 
 
   </div>
