--- a/sintaxe/Basic/5-EventTarget.html
+++ b/sintaxe/Basic/5-EventTarget.html
@@ -1,3 +1,13 @@
+<!--
+   @input: evento nativo do DOM que é invocado toda vez que um valor é
+   atribuido em <input>, <textarea> ou <select>.
+
+   $event.target: referência ao elemento DOM que fez o disparo do evento, 
+   nesse caso <input type="text">.
+   
+   $event.target.value: contém o conteúdo digitado.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,16 +43,6 @@
 
 <!-- Vue.js -->
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
-<!--
-   @input: evento nativo do DOM que é incovado toda vez que um valor é
-   atribuido em <input>, <textarea> ou <select>.
-
-   $event.target: referência ao elemento DOM que fez o disparo do evento, 
-   nesse caso <input type="text">.
-   
-   $event.target.value: contém o conteúdo digitado.
--->
 
 <body>
   <div id="app" v-cloak>
